--- a/Day 6/faq.html
+++ b/Day 6/faq.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet" />
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <title>Cats in Tech Guild FAQ</title>
+    <!-- <link rel="icon" type="image/x-icon" href="./favicon.ico"> -->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <style>
         /* CSS for styling the FAQ page */
         body {
@@ -18,6 +20,7 @@
         .faq-section {
                 max-width: 760px;
                 margin: 0 auto;
+                display: none;
         }
 
         header {
@@ -101,9 +104,6 @@
                 --trans-dur: 0.3s;
                 font-size: calc(16px + (20 - 16) * (100vw - 320px) / (1280 - 320));
         }
-        .tower{
-                /* display: none; */
-        }
 
         .tower,
         .tower__brick,
@@ -117,8 +117,8 @@
                 margin: 0 auto 1.5em auto;
                 position: relative;
                 perspective: 800px;
-                width: 16em;
-                height: 16em;
+                width: 30em;
+                height: 30em;
         }
         .tower__brick,
         .tower__brick-layer,
@@ -460,7 +460,7 @@
   </head>
   <body>
         <!-- Preloader div - tower -->
-        <div class="tower">
+        <div class="tower" id="tower">
 		<div class="tower__group">
 			<div class="tower__brick-layer tower__brick-layer--4">
 				<div class="tower__brick tower__brick--0">
@@ -739,7 +739,7 @@
         <!-- Preloader div container ends -->
 
         <!-- This is the FAQ page -->
-        <div class="faq-section">
+        <div class="faq-section" id="faq-section">
                 <header>
                   <h2>FAQs</h2> 
                   <p>Cats in Tech Guild - Global Hack Week, MLH</p>
@@ -806,15 +806,19 @@
               <script>
                 // JavaScript code to hide the preloader after the page has finished loading
                 // Select the preloader animation
-                var preloader = document.getElementsByClassName("tower");
+                var loader = document.getElementById('tower');
+                var faq = document.getElementById('faq-section');
+                // faq.style.display = 'none';     
 
-                // Hide the preloader animation when the website has finished loading
-                window.addEventListener("load", function(){
-                        preloader.style.display = "none";
+                window.addEventListener ("load", function() {
+                //Hide the spinner after 2 seconds
+                setTimeout(function(){
+                        loader.style.display = 'none';
+                        faq.style.display = 'block';
+                }, 3000);
+                
+
                 });
-
-                //for pausing to 1s
-                SetTimeOut(load, 1000) 
               </script>
   </body>
 </html>
